--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -4,22 +4,8 @@
   box-sizing: border-box;
 }
 
-.test {
+.title {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  @media screen and (max-width: 800px) {
-    display: block;
-  }
-}
-
-.test-two {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  @media screen and (max-width: 800px) {
-    display: block;
-  }
+  color: rgb(255, 0, 0);
 }
